--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -61,7 +61,7 @@
         </DataGrid>
         <materialDesign:Card Background="#27378C"  FontSize="12" Grid.Row="1" Grid.Column="1" Margin="20 0 15 20">
             <StackPanel Width="300" Height="200">
-                <Image Source="{Binding Image,Mode=TwoWay}" Width="50" Height="50"/>
+                <Image Source="{Binding Url,Mode=TwoWay}" Width="50" Height="50"/>
             </StackPanel>
         </materialDesign:Card>
         <materialDesign:Card Background="#27378C" Foreground="White" FontSize="12" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3" Margin="10 0 25 20">
