--- a/View/Registration.xaml
+++ b/View/Registration.xaml
@@ -70,11 +70,11 @@
                     <TextBox x:Name="EmailTB" Grid.Row="4" Grid.Column="1" Foreground="White" FontSize="28" VerticalContentAlignment="Center" CaretBrush="White" Margin="15 10 15 10"
                              Style="{DynamicResource MaterialDesignTextBox}" Padding="15 0 0 0" />
 
-                    <TextBox x:Name="PassTB" Grid.Row="6" Grid.Column="1" Foreground="White" FontSize="28" VerticalContentAlignment="Center" CaretBrush="White" Margin="15 10 15 10"
-                             Style="{DynamicResource MaterialDesignTextBox}" Padding="15 0 0 0" />
+                    <PasswordBox x:Name="PassTB" Grid.Row="6" Grid.Column="1" Foreground="White" FontSize="28" VerticalContentAlignment="Center" CaretBrush="White" Margin="15 10 15 10"
+                             Style="{DynamicResource MaterialDesignPasswordBox}" Padding="15 0 0 0" />
 
-                    <TextBox x:Name="RepassTB" Grid.Row="8" Grid.Column="1" Foreground="White" FontSize="28" VerticalContentAlignment="Center" CaretBrush="White" Margin="15 10 15 10"
-                             Style="{DynamicResource MaterialDesignTextBox}" Padding="15 0 0 0" />
+                    <PasswordBox x:Name="RepassTB" Grid.Row="8" Grid.Column="1" Foreground="White" FontSize="28" VerticalContentAlignment="Center" CaretBrush="White" Margin="15 10 15 10"
+                             Style="{DynamicResource MaterialDesignPasswordBox}" Padding="15 0 0 0" />
 
                 </Grid>
             </Border>
